--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,20 @@
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML5
 
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=true
+
+#Donde vamos a guardar la base de datos
+spring.datasource.url=jdbc:h2:file:~/UPLOAD
+
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=update
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
+
